# localization

./: CMakeLists.txt  CMakeLists.txt~  Map_message.msg  guide.txt  package.xml
build-localization-Desktop-Debug/: Makefile
launch/: depth_localization.launch  depth_localization.launch~  localization.launch
maps/: contest_rehersal_maze.txt  small_maze.txt  test_big_maze.txt
msg/: Depth_Ranges.msg  Depth_Ranges.msg~  Distance_message.msg  Position.msg  map_message.msg~
src/: depth_readings_publisher.cpp  distance_converter.cpp  frame_test.py  kidnapped_particle_filter_with_depth_sensor.cpp  map_reader.py  map_reader.py~  map_reader_tester.py  particle_filter with_depth_sensor.cpp  particle_filter.cpp  particle_filter_python.py  particle_filter_simulation.cpp  particle_filter_with_depth_sensor.cpp
